// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadConfig can load config objects 1`] = `
Object {
  "cacheStores": Array [],
  "cacheVersion": "1.0",
  "maxWorkers": 2,
  "projectRoot": "/",
  "reporter": null,
  "resetCache": false,
  "resolver": Object {
    "assetExts": Array [
      "bmp",
      "gif",
      "jpg",
      "jpeg",
      "png",
      "psd",
      "svg",
      "webp",
      "m4v",
      "mov",
      "mp4",
      "mpeg",
      "mpg",
      "webm",
      "aac",
      "aiff",
      "caf",
      "m4a",
      "mp3",
      "wav",
      "html",
      "json",
      "pdf",
      "yaml",
      "yml",
      "otf",
      "ttf",
      "zip",
    ],
    "assetResolutions": Array [
      "1",
      "1.5",
      "2",
      "3",
      "4",
    ],
    "blockList": /\\(website\\\\/node_modules\\\\/\\.\\*\\|\\.\\*\\\\/__tests__\\\\/\\.\\*\\)\\$/,
    "dependencyExtractor": undefined,
    "extraNodeModules": Object {},
    "hasteImplModulePath": undefined,
    "nodeModulesPaths": Array [],
    "platforms": Array [
      "ios",
      "android",
      "windows",
      "web",
    ],
    "resolveRequest": null,
    "resolverMainFields": Array [
      "browser",
      "main",
    ],
    "sourceExts": Array [
      "js",
      "json",
      "ts",
      "tsx",
    ],
    "useWatchman": true,
  },
  "serializer": Object {
    "createModuleIdFactory": [Function],
    "customSerializer": null,
    "experimentalSerializerHook": [Function],
    "getModulesRunBeforeMainModule": [Function],
    "getPolyfills": [Function],
    "getRunModuleStatement": [Function],
    "polyfillModuleNames": Array [],
    "postProcessBundleSourcemap": [Function],
    "processModuleFilter": [Function],
  },
  "server": Object {
    "enhanceMiddleware": [Function],
    "port": 8080,
    "rewriteRequestUrl": [Function],
    "runInspectorProxy": true,
    "useGlobalHotkey": true,
    "verifyConnections": false,
  },
  "stickyWorkers": true,
  "symbolicator": Object {
    "customizeFrame": [Function],
  },
  "transformer": Object {
    "allowOptionalDependencies": false,
    "assetPlugins": Array [],
    "assetRegistryPath": "missing-asset-registry-path",
    "asyncRequireModulePath": "metro-runtime/src/modules/asyncRequire",
    "babelTransformerPath": "metro-babel-transformer",
    "dynamicDepsInPackages": "throwAtRuntime",
    "enableBabelRCLookup": true,
    "enableBabelRuntime": true,
    "experimentalImportBundleSupport": false,
    "getTransformOptions": [Function],
    "globalPrefix": "",
    "minifierConfig": Object {
      "compress": Object {
        "reduce_funcs": false,
      },
      "mangle": Object {
        "toplevel": false,
      },
      "output": Object {
        "ascii_only": true,
        "quote_style": 3,
        "wrap_iife": true,
      },
      "sourceMap": Object {
        "includeSources": false,
      },
      "toplevel": false,
    },
    "minifierPath": "metro-minify-uglify",
    "optimizationSizeLimit": 153600,
    "postMinifyProcess": [Function],
    "publicPath": "/assets",
    "transformVariants": Object {
      "default": Object {},
    },
    "workerPath": "metro/src/DeltaBundler/Worker",
  },
  "transformerPath": "",
  "watchFolders": Array [
    "/",
  ],
}
`;

exports[`loadConfig can load the config from a path 1`] = `
Object {
  "cacheStores": Array [],
  "cacheVersion": "1.0",
  "maxWorkers": 2,
  "projectRoot": "/",
  "reporter": null,
  "resetCache": false,
  "resolver": Object {
    "assetExts": Array [
      "bmp",
      "gif",
      "jpg",
      "jpeg",
      "png",
      "psd",
      "svg",
      "webp",
      "m4v",
      "mov",
      "mp4",
      "mpeg",
      "mpg",
      "webm",
      "aac",
      "aiff",
      "caf",
      "m4a",
      "mp3",
      "wav",
      "html",
      "json",
      "pdf",
      "yaml",
      "yml",
      "otf",
      "ttf",
      "zip",
    ],
    "assetResolutions": Array [
      "1",
      "1.5",
      "2",
      "3",
      "4",
    ],
    "blockList": /\\(website\\\\/node_modules\\\\/\\.\\*\\|\\.\\*\\\\/__tests__\\\\/\\.\\*\\)\\$/,
    "dependencyExtractor": undefined,
    "extraNodeModules": Object {},
    "hasteImplModulePath": undefined,
    "nodeModulesPaths": Array [],
    "platforms": Array [
      "ios",
      "android",
      "windows",
      "web",
    ],
    "resolveRequest": null,
    "resolverMainFields": Array [
      "browser",
      "main",
    ],
    "sourceExts": Array [
      "js",
      "json",
      "ts",
      "tsx",
    ],
    "useWatchman": true,
  },
  "serializer": Object {
    "createModuleIdFactory": [Function],
    "customSerializer": null,
    "experimentalSerializerHook": [Function],
    "getModulesRunBeforeMainModule": [Function],
    "getPolyfills": [Function],
    "getRunModuleStatement": [Function],
    "polyfillModuleNames": Array [],
    "postProcessBundleSourcemap": [Function],
    "processModuleFilter": [Function],
  },
  "server": Object {
    "enhanceMiddleware": [Function],
    "port": 8080,
    "rewriteRequestUrl": [Function],
    "runInspectorProxy": true,
    "useGlobalHotkey": true,
    "verifyConnections": false,
  },
  "stickyWorkers": true,
  "symbolicator": Object {
    "customizeFrame": [Function],
  },
  "transformer": Object {
    "allowOptionalDependencies": false,
    "assetPlugins": Array [],
    "assetRegistryPath": "missing-asset-registry-path",
    "asyncRequireModulePath": "metro-runtime/src/modules/asyncRequire",
    "babelTransformerPath": "metro-babel-transformer/src/index.js",
    "dynamicDepsInPackages": "throwAtRuntime",
    "enableBabelRCLookup": true,
    "enableBabelRuntime": true,
    "experimentalImportBundleSupport": false,
    "getTransformOptions": [Function],
    "globalPrefix": "",
    "minifierConfig": Object {
      "compress": Object {
        "reduce_funcs": false,
      },
      "mangle": Object {
        "toplevel": false,
      },
      "output": Object {
        "ascii_only": true,
        "quote_style": 3,
        "wrap_iife": true,
      },
      "sourceMap": Object {
        "includeSources": false,
      },
      "toplevel": false,
    },
    "minifierPath": "metro-minify-uglify",
    "optimizationSizeLimit": 153600,
    "postMinifyProcess": [Function],
    "publicPath": "/assets",
    "transformVariants": Object {
      "default": Object {},
    },
    "workerPath": "metro/src/DeltaBundler/Worker",
  },
  "transformerPath": "",
  "watchFolders": Array [
    "/",
  ],
}
`;

exports[`loadConfig can load the config from a path pointing to a directory 1`] = `
Object {
  "cacheStores": Array [],
  "cacheVersion": "1.0",
  "maxWorkers": 2,
  "projectRoot": "/",
  "reporter": null,
  "resetCache": false,
  "resolver": Object {
    "assetExts": Array [
      "bmp",
      "gif",
      "jpg",
      "jpeg",
      "png",
      "psd",
      "svg",
      "webp",
      "m4v",
      "mov",
      "mp4",
      "mpeg",
      "mpg",
      "webm",
      "aac",
      "aiff",
      "caf",
      "m4a",
      "mp3",
      "wav",
      "html",
      "json",
      "pdf",
      "yaml",
      "yml",
      "otf",
      "ttf",
      "zip",
    ],
    "assetResolutions": Array [
      "1",
      "1.5",
      "2",
      "3",
      "4",
    ],
    "blockList": /\\(website\\\\/node_modules\\\\/\\.\\*\\|\\.\\*\\\\/__tests__\\\\/\\.\\*\\)\\$/,
    "dependencyExtractor": undefined,
    "extraNodeModules": Object {},
    "hasteImplModulePath": undefined,
    "nodeModulesPaths": Array [],
    "platforms": Array [
      "ios",
      "android",
      "windows",
      "web",
    ],
    "resolveRequest": null,
    "resolverMainFields": Array [
      "browser",
      "main",
    ],
    "sourceExts": Array [
      "js",
      "json",
      "ts",
      "tsx",
    ],
    "useWatchman": true,
  },
  "serializer": Object {
    "createModuleIdFactory": [Function],
    "customSerializer": null,
    "experimentalSerializerHook": [Function],
    "getModulesRunBeforeMainModule": [Function],
    "getPolyfills": [Function],
    "getRunModuleStatement": [Function],
    "polyfillModuleNames": Array [],
    "postProcessBundleSourcemap": [Function],
    "processModuleFilter": [Function],
  },
  "server": Object {
    "enhanceMiddleware": [Function],
    "port": 8080,
    "rewriteRequestUrl": [Function],
    "runInspectorProxy": true,
    "useGlobalHotkey": true,
    "verifyConnections": false,
  },
  "stickyWorkers": true,
  "symbolicator": Object {
    "customizeFrame": [Function],
  },
  "transformer": Object {
    "allowOptionalDependencies": false,
    "assetPlugins": Array [],
    "assetRegistryPath": "missing-asset-registry-path",
    "asyncRequireModulePath": "metro-runtime/src/modules/asyncRequire",
    "babelTransformerPath": "metro-babel-transformer/src/index.js",
    "dynamicDepsInPackages": "throwAtRuntime",
    "enableBabelRCLookup": true,
    "enableBabelRuntime": true,
    "experimentalImportBundleSupport": false,
    "getTransformOptions": [Function],
    "globalPrefix": "",
    "minifierConfig": Object {
      "compress": Object {
        "reduce_funcs": false,
      },
      "mangle": Object {
        "toplevel": false,
      },
      "output": Object {
        "ascii_only": true,
        "quote_style": 3,
        "wrap_iife": true,
      },
      "sourceMap": Object {
        "includeSources": false,
      },
      "toplevel": false,
    },
    "minifierPath": "metro-minify-uglify",
    "optimizationSizeLimit": 153600,
    "postMinifyProcess": [Function],
    "publicPath": "/assets",
    "transformVariants": Object {
      "default": Object {},
    },
    "workerPath": "metro/src/DeltaBundler/Worker",
  },
  "transformerPath": "",
  "watchFolders": Array [
    "/",
  ],
}
`;

exports[`loadConfig injects \`metro-cache\` into the \`cacheStores\` callback 1`] = `
Object {
  "cacheStores": Array [],
  "cacheVersion": "1.0",
  "maxWorkers": 2,
  "projectRoot": "/",
  "reporter": null,
  "resetCache": false,
  "resolver": Object {
    "assetExts": Array [
      "bmp",
      "gif",
      "jpg",
      "jpeg",
      "png",
      "psd",
      "svg",
      "webp",
      "m4v",
      "mov",
      "mp4",
      "mpeg",
      "mpg",
      "webm",
      "aac",
      "aiff",
      "caf",
      "m4a",
      "mp3",
      "wav",
      "html",
      "json",
      "pdf",
      "yaml",
      "yml",
      "otf",
      "ttf",
      "zip",
    ],
    "assetResolutions": Array [
      "1",
      "1.5",
      "2",
      "3",
      "4",
    ],
    "blockList": /\\(website\\\\/node_modules\\\\/\\.\\*\\|\\.\\*\\\\/__tests__\\\\/\\.\\*\\)\\$/,
    "dependencyExtractor": undefined,
    "extraNodeModules": Object {},
    "hasteImplModulePath": undefined,
    "nodeModulesPaths": Array [],
    "platforms": Array [
      "ios",
      "android",
      "windows",
      "web",
    ],
    "resolveRequest": null,
    "resolverMainFields": Array [
      "browser",
      "main",
    ],
    "sourceExts": Array [
      "js",
      "json",
      "ts",
      "tsx",
    ],
    "useWatchman": true,
  },
  "serializer": Object {
    "createModuleIdFactory": [Function],
    "customSerializer": null,
    "experimentalSerializerHook": [Function],
    "getModulesRunBeforeMainModule": [Function],
    "getPolyfills": [Function],
    "getRunModuleStatement": [Function],
    "polyfillModuleNames": Array [],
    "postProcessBundleSourcemap": [Function],
    "processModuleFilter": [Function],
  },
  "server": Object {
    "enhanceMiddleware": [Function],
    "port": 8080,
    "rewriteRequestUrl": [Function],
    "runInspectorProxy": true,
    "useGlobalHotkey": true,
    "verifyConnections": false,
  },
  "stickyWorkers": true,
  "symbolicator": Object {
    "customizeFrame": [Function],
  },
  "transformer": Object {
    "allowOptionalDependencies": false,
    "assetPlugins": Array [],
    "assetRegistryPath": "missing-asset-registry-path",
    "asyncRequireModulePath": "metro-runtime/src/modules/asyncRequire",
    "babelTransformerPath": "metro-babel-transformer",
    "dynamicDepsInPackages": "throwAtRuntime",
    "enableBabelRCLookup": true,
    "enableBabelRuntime": true,
    "experimentalImportBundleSupport": false,
    "getTransformOptions": [Function],
    "globalPrefix": "",
    "minifierConfig": Object {
      "compress": Object {
        "reduce_funcs": false,
      },
      "mangle": Object {
        "toplevel": false,
      },
      "output": Object {
        "ascii_only": true,
        "quote_style": 3,
        "wrap_iife": true,
      },
      "sourceMap": Object {
        "includeSources": false,
      },
      "toplevel": false,
    },
    "minifierPath": "metro-minify-uglify",
    "optimizationSizeLimit": 153600,
    "postMinifyProcess": [Function],
    "publicPath": "/assets",
    "transformVariants": Object {
      "default": Object {},
    },
    "workerPath": "metro/src/DeltaBundler/Worker",
  },
  "transformerPath": "",
  "watchFolders": Array [
    "/",
  ],
}
`;

exports[`loadConfig validates config for projectRoot 1`] = `
"● Validation Error:

  Option \\"projectRoot\\" must be of type:
    string
  but instead received:
    array

  Example:
  {
    \\"projectRoot\\": \\"/path/to/project\\"
  }
"
`;

exports[`loadConfig validates config for server 1`] = `
"● Validation Error:

  Option \\"server.useGlobalHotkey\\" must be of type:
    boolean
  but instead received:
    string

  Example:
  {
    \\"useGlobalHotkey\\": true
  }
"
`;
